--- a/KPoint.plist
+++ b/KPoint.plist
@@ -29,7 +29,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.cqaizhe.baobaoquan</string>
+				<string>com.cqaizhe.kpoint</string>
 				<key>bundle-version</key>
 				<string>1.0.0</string>
 				<key>kind</key>
