--- a/JLChat.plist
+++ b/JLChat.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://www.vasueyun.cn/mcapp/JLChat/JLChat.ipa</string>
+					<string>https://app.jietushuiyin.com/tg/apple/JLChat/JLChat.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>http://www.vasueyun.cn/mcapp/JLChat/57.png</string>
+					<string>https://app.jietushuiyin.com/tg/apple/JLChat/57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>http://www.vasueyun.cn/mcapp/JLChat/512.png</string>
+					<string>https://app.jietushuiyin.com/tg/apple/JLChat/512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -31,7 +31,7 @@
 				<key>bundle-identifier</key>
 				<string>com.cqaizhe.baobaoquan</string>
 				<key>bundle-version</key>
-				<string>1.1.4.0</string>
+				<string>1.3.2.1</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
